@@ -1,5 +1,8 @@
 package com.gorevce.authentication_service.service.Impl;
 
+import com.gorevce.authentication_service.dto.request.PermissionRequest;
+import com.gorevce.authentication_service.dto.response.PermissionResponse;
+import com.gorevce.authentication_service.dto.response.RoleResponse;
 import com.gorevce.authentication_service.exception.CustomException;
 import com.gorevce.authentication_service.model.EndpointPermission;
 import com.gorevce.authentication_service.model.Role;
@@ -9,9 +12,8 @@ import com.gorevce.authentication_service.service.RoleService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class EndpointPermissionServiceImpl implements EndpointPermissionService {
@@ -23,112 +25,114 @@ public class EndpointPermissionServiceImpl implements EndpointPermissionService 
 
 
     @Override
-    public void createEndpointPermission(String endpoint, String httpMethod) {
-        // Check if the endpoint permission already exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isPresent()) {
-            throw new CustomException("Endpoint permission already exists", 400, Collections.singletonMap("endpoint", endpoint));
+    public List<PermissionResponse> getAllPermissions() {
+        // get all permissions
+        List<EndpointPermission> endpointPermissions = endpointPermissionRepository.findAll();
+        List<PermissionResponse> permissionResponses = new ArrayList<>();
+        // for each permission in endpointPermissions
+        for (EndpointPermission endpointPermission : endpointPermissions) {
+            Set<Role> roles = endpointPermission.getRoles();
+            Set<RoleResponse> roleResponses = roles.stream().map(role -> RoleResponse.builder()
+                    .id(role.getId())
+                    .role(role.getName())
+                    .build()).collect(Collectors.toSet());
+
+            // set the roles of the permission to the roleResponses
+            permissionResponses = endpointPermissions.stream().map(
+                    permission -> PermissionResponse.builder()
+                    .id(permission.getId())
+                    .endpoint(permission.getEndpoint())
+                    .method(permission.getHttpMethod())
+                    .description(permission.getDescription())
+                    .roles(roleResponses)
+                    .build()).toList();
         }
-        // Create a new endpoint permission
+        return permissionResponses;
+    }
+
+    @Override
+    public PermissionResponse createPermission(PermissionRequest createPermissionRequest) {
+        // create a new permission
         EndpointPermission endpointPermission = EndpointPermission.builder()
-                .endpoint(endpoint)
-                .httpMethod(httpMethod)
-                .roles(Collections.emptySet())
+                .endpoint(createPermissionRequest.getEndpoint())
+                .httpMethod(createPermissionRequest.getMethod())
+                .description(createPermissionRequest.getDescription())
+                .roles(createPermissionRequest
+                        .getRoles()
+                        .stream()
+                        .map(
+                                roleName -> roleService.getRoleByName(roleName)
+                        )
+                        .collect(Collectors.toSet())
+                ).build();
+        // save the permission
+        EndpointPermission saved = endpointPermissionRepository.save(endpointPermission);
+        return PermissionResponse.builder()
+                .id(saved.getId())
+                .endpoint(saved.getEndpoint())
+                .method(saved.getHttpMethod())
+                .description(saved.getDescription())
+                .roles(new HashSet<>())
                 .build();
-        // Save the endpoint permission
-        endpointPermissionRepository.save(endpointPermission);
     }
 
     @Override
-    public void deleteEndpointPermission(String endpoint, String httpMethod) {
-        // Check if the endpoint permission exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isEmpty()) {
-            throw new CustomException("Endpoint permission does not exist", 404, Collections.singletonMap("endpoint", endpoint));
-        }
-        // Delete the endpoint permission
-        endpointPermissionRepository.deleteByEndpointAndHttpMethod(endpoint, httpMethod);
-    }
+    public PermissionResponse deletePermission(String permissionId) {
+        // find the permission by id
+        EndpointPermission endpointPermission = endpointPermissionRepository.findById(permissionId).orElseThrow(
+                () -> new CustomException("Permission not found", 404, Map.of("permissionId", permissionId))
+        );
 
-    @Override
-    public void addPermission(String endpoint, String httpMethod, String role) {
-        // Check if the endpoint permission exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isEmpty()) {
-            throw new CustomException("Endpoint permission does not exist", 404, Collections.singletonMap("endpoint", endpoint));
-        }
-        // Check if the role exists
-        if (!roleService.roleExists(role)) {
-            throw new CustomException("Role does not exist", 404, Collections.singletonMap("role", role));
-        }
-        // Check if the role is already added to the endpoint permission
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get().getRoles().stream().anyMatch(r -> r.getName().equals(role))) {
-            throw new CustomException("Role already added to the endpoint permission", 400, Collections.singletonMap("role", role));
-        }
-        // Add the role to the endpoint permission
-        EndpointPermission endpointPermission = endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get();
-        endpointPermission.getRoles().add(roleService.getRole(role));
-        // Save the endpoint permission
-        endpointPermissionRepository.save(endpointPermission);
-    }
-
-    @Override
-    public void removePermission(String endpoint, String httpMethod, String role) {
-        // Check if the endpoint permission exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isEmpty()) {
-            throw new CustomException("Endpoint permission does not exist", 404, Collections.singletonMap("endpoint", endpoint));
-        }
-        // Check if the role exists
-        if (!roleService.roleExists(role)) {
-            throw new CustomException("Role does not exist", 404, Collections.singletonMap("role", role));
-        }
-        // Check if the role is already added to the endpoint permission
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get().getRoles().stream().noneMatch(r -> r.getName().equals(role))) {
-            throw new CustomException("Role not added to the endpoint permission", 400, Collections.singletonMap("role", role));
-        }
-        // Remove the role from the endpoint permission
-        EndpointPermission endpointPermission = endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get();
-        endpointPermission.getRoles().remove(roleService.getRole(role));
-        // Save the endpoint permission
-        endpointPermissionRepository.save(endpointPermission);
-
-    }
-
-    @Override
-    public boolean hasPermission(String endpoint, String httpMethod, String userRole) {
-        // Check if the endpoint permission exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isEmpty()) {
-            return false;
-        }
-        // Check if the role exists
-        if (!roleService.roleExists(userRole)) {
-            return false;
-        }
-        // Check if the user has permission to access the endpoint
-        return endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get().getRoles().stream().anyMatch(r -> r.getName().equals(userRole));
-    }
-
-    @Override
-    public List<String> getPermissions(String endpoint, String httpMethod) {
-        // Check if the endpoint permission exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).isEmpty()) {
-            throw new CustomException("Endpoint permission does not exist", 404, Collections.singletonMap("endpoint", endpoint));
-        }
-        // Get the list of permissions for the endpoint
-        return endpointPermissionRepository.findByEndpointAndHttpMethod(endpoint, httpMethod).get().getRoles().stream().map(Role::getName).toList();
-    }
-
-    @Override
-    public void createEndpointPermissionIfNotFound(String path, String get, Set<Role> adminRole) {
-        // Check if the endpoint permission already exists
-        if (endpointPermissionRepository.findByEndpointAndHttpMethod(path, get).isPresent()) {
-            return;
-        }
-        // Create a new endpoint permission
-        EndpointPermission endpointPermission = EndpointPermission.builder()
-                .endpoint(path)
-                .httpMethod(get)
-                .roles(adminRole)
+        // delete the permission
+        endpointPermissionRepository.delete(endpointPermission);
+        return PermissionResponse.builder()
+                .id(endpointPermission.getId())
+                .endpoint(endpointPermission.getEndpoint())
+                .method(endpointPermission.getHttpMethod())
+                .description(endpointPermission.getDescription())
+                .roles(new HashSet<>())
                 .build();
-        // Save the endpoint permission
-        endpointPermissionRepository.save(endpointPermission);
-
     }
+
+    @Override
+    public PermissionResponse updatePermission(String permissionId, PermissionRequest updatePermissionRequest) {
+        // find the permission by id
+        EndpointPermission endpointPermission = endpointPermissionRepository.findById(permissionId).orElseThrow(
+                () -> new CustomException("Permission not found", 404, Map.of("permissionId", permissionId))
+        );
+        // update the permission
+        endpointPermission.setEndpoint(updatePermissionRequest.getEndpoint());
+        endpointPermission.setHttpMethod(updatePermissionRequest.getMethod());
+        endpointPermission.setDescription(updatePermissionRequest.getDescription());
+        // save the permission
+        EndpointPermission saved = endpointPermissionRepository.save(endpointPermission);
+        return PermissionResponse.builder()
+                .id(saved.getId())
+                .endpoint(saved.getEndpoint())
+                .method(saved.getHttpMethod())
+                .description(saved.getDescription())
+                .roles(new HashSet<>())
+                .build();
+    }
+
+    @Override
+    public PermissionResponse getPermissionById(String permissionId) {
+        // find the permission by id
+        EndpointPermission endpointPermission = endpointPermissionRepository.findById(permissionId).orElseThrow(
+                () -> new CustomException("Permission not found", 404, Map.of("permissionId", permissionId))
+        );
+        Set<Role> roles = endpointPermission.getRoles();
+        Set<RoleResponse> roleResponses = roles.stream().map(role -> RoleResponse.builder()
+                .id(role.getId())
+                .role(role.getName())
+                .build()).collect(Collectors.toSet());
+        return PermissionResponse.builder()
+                .id(endpointPermission.getId())
+                .endpoint(endpointPermission.getEndpoint())
+                .method(endpointPermission.getHttpMethod())
+                .description(endpointPermission.getDescription())
+                .roles(roleResponses)
+                .build();
+    }
+
 }
